--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
   --primary-color: #111;
   --secondary-color: #818181;
   --tertiary-color: #3c3a3a;
-  --quaternary-color: rgba(30,61,40,255);
+  --quaternary-color: #ddd2bb;
 }
 
 * {
@@ -13,7 +13,7 @@
 }
 
 html {
-  background-color: #ddd2bb;
+  background-color: var(--quaternary-color);
 }
 
 body {
@@ -241,6 +241,66 @@ footer a {
   align-items: center;
   flex-direction: column;
   margin-top: 50px;
+}
+
+.mumfest {
+  display: flex;
+  width: 80%;
+  margin: 0 auto 50px auto;
+  box-shadow: 0 0 18px rgba(0, 0, 0, 0.7);
+}
+
+.mumfest img {
+  width: 400px;
+  height: 100%;
+}
+
+.mum-sales {
+  background-color: var(--quaternary-color);
+}
+
+.mum-sales h2 {
+  margin: 10px;
+  text-align: center;
+  font-size: 35px;
+}
+
+.mum-sales p {
+  text-align: center;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 28px;
+  margin-bottom: 15px;
+  padding: 5px;
+}
+
+.mum-sales p span {
+  margin-left: 20px;
+  font-size: 18px;
+}
+
+.mum-sales a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  text-decoration: none;
+  color: white;
+  background-color: #111;
+  font-size: 20px;
+  margin: 20px auto 20px auto;
+  padding: 10px;
+  box-shadow: 0 0 18px rgba(0, 0, 0, 0.7);
+}
+
+.button {
+  width: 225px;
+  height: 45px;
+}
+
+.button-new {
+  width: 380px;
+  height: 45px;
 }
 
 .troop-photo {
@@ -726,6 +786,12 @@ footer a {
 }
 /* End Eagle Scouts Styles */
 
+@media screen and (max-width: 1050px) {
+  .mumfest {
+    width: 95%;
+  }
+}
+
 /* MEDIA QUERY FOR SCREENS 980PX AND SMALLER */
 @media screen and (max-width: 980px) {
   .logo img {
@@ -738,6 +804,10 @@ footer a {
 
   .soup-the-turtle img {
     height: 150px;
+  }
+
+  .mumfest img {
+    width: 300px;
   }
 
   .troop-photo img {
@@ -799,6 +869,14 @@ footer a {
     font-size: 30px;
   }
 
+  .mumfest img {
+    width: 300px;
+  }
+
+  .button-new {
+    width: 90%;
+  }
+
   .troop-photo img {
     width: 95%;
   }
@@ -817,6 +895,17 @@ footer a {
 @media screen AND (max-width: 575px) {
   .motto {
     order: 3;
+  }
+
+  .mumfest {
+    flex-direction: column;
+  }
+
+  .mumfest img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
   }
 
   .troop-photo img {
@@ -891,6 +980,8 @@ footer a {
 
 /* MEDIA QUERY FOR SCREENS 400PX AND SMALLER */
 @media screen and (max-width: 400px) {
+  
+
   .links  img {
     width: 75%;
     margin-left: auto;
