--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,7 @@ header {
   display: -ms-flexbox;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  align-items: center;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
@@ -922,6 +923,7 @@ footer a {
     display: -webkit-flex;
     display: -ms-flexbox;
     justify-content: center;
+    align-items: center;
     -webkit-box-align: center;
     -webkit-align-items: center;
     -ms-flex-align: center;
