--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ body {
   text-align: center;
   margin: 35px auto 35px auto;
   width: 50%;
-  font-size: 65px;
+  font-size: 85px;
 }
 
 .title {
@@ -447,7 +447,10 @@ footer a {
 .year {
   margin: 45px 0 35px 0;
   text-align: center;
-  font-size: 35px;
+}
+
+.year h2 {
+  font-size: 65px;
 }
 
 .events {
