added troop store link

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,6 +244,52 @@ footer a {
   margin-top: 50px;
 }
 
+.store {
+  width: 80%;
+  margin: 0 auto 50px auto;
+  box-shadow: 0 0 18px rgba(0, 0, 0, 0.7);
+}
+
+.troop-store {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  padding: 30px 0px;
+}
+
+.troop-store p {
+  font-size: 25px;
+  line-height: 40px;
+  font-weight: 600;
+  width: 500px;
+  padding: 30px;
+}
+
+.troop-store img {
+  height: 150px;
+  /* width: 100px; */
+}
+
+.store-link {
+  /* display: flex;
+  flex-wrap: wrap;
+  justify-content: center; */
+  text-align: center;
+}
+
+.store-link a {
+  color: var(--primary-color);
+  text-decoration: none;
+	cursor: pointer;
+  font-size: 35px;
+  font-weight: 600;
+  padding: 25px;
+}
+
+.store-link a:hover {
+  color: var(--secondary-color);
+}
+
 .mumfest {
   display: none;
   width: 80%;
@@ -793,6 +839,32 @@ footer a {
 @media screen and (max-width: 1050px) {
   .mumfest {
     width: 95%;
+  }
+
+  #logo {
+    order: 1;
+  }
+
+  #soup {
+    order: 3;
+  }
+
+  #text {
+    order: 2;
+  }
+}
+
+@media screen and (max-width: 1020px){
+  #logo {
+    order: 1;
+  }
+
+  #soup {
+    order: 2;
+  }
+
+  #text {
+    order: 3;
   }
 }
 
