--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -835,6 +835,39 @@ footer a {
 }
 /* End Eagle Scouts Styles */
 
+/* Start Newsletter Styles */
+.newsletter {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.newsletter h2 {
+  text-align: center;
+  font-size: 35px;
+  padding: 20px;
+}
+
+.news {
+  padding: 20px;
+}
+
+.newsImg a {
+  width: 300px;
+  height: 300px;
+}
+
+.newsImg img {
+  width: 300px;
+  height: 300px;
+  transition: 0.3s ease-in-out;
+}
+
+.newsImg img:hover {
+  transform: scale(1.1);
+}
+/* End Newsletter Styles */
+
 @media screen and (max-width: 1050px) {
   .mumfest {
     width: 95%;
@@ -948,6 +981,11 @@ footer a {
 
 /* MEDIA QUERY FOR SCREENS 768PX AND SMALLER */
 @media screen and (max-width: 768px) {
+  .section-title {
+    font-size: 75px;
+    width: 90%;
+  }
+
   .motto {
     font-size: 30px;
   }
