--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,6 +216,7 @@ footer a {
 
 .category a {
   text-decoration: none;
+  text-align: center;
   font-size: 35px;
   font-weight: 700;
   color: var(--primary-color);
