--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -378,7 +378,8 @@ footer a {
 .leadership img {
   width: 300px;
   height: auto;
-  padding: 10px;
+  margin: 10px;
+  box-shadow: 0 0 18px rgba(0, 0, 0, 0.7);
 }
 
 .troop-photo {
