--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -363,16 +363,31 @@ footer a {
   height: 55px;
 }
 
-.leader {
+.box {
+  display: flex;
+  flex-direction: column;
+  margin: 30px;
+  box-shadow: 0 0 18px rgba(0, 0, 0, 0.7);
+}
+
+.leader h2 {
+  color: var(--primary-color);
+  word-wrap: break-word;
+  border-bottom: 3px solid;
   text-align: center;
-  font-size: 25px;
+  margin: 35px auto 35px auto;
+  width: 50%;
+  font-size: 40px;
 }
 
 .leadership {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  align-self: center;
   margin-bottom: 40px;
+}
+
+.leadership h3 {
+  text-align: center;
+  font-size: 35px;
 }
 
 .leadership img {
