--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,18 +246,6 @@ footer a {
   margin-top: 50px;
 }
 
-.girl-troop {
-  display: none;
-  text-align: center;
-  padding: 30px 0px 50px 0px;
-}
-
-.girl-troop img {
-  box-shadow: 0 0 18px rgba(0, 0, 0, 0.7);
-  width: 500px;
-  height: auto;
-}
-
 .store {
   display: none;
   width: 90%;
@@ -364,7 +352,7 @@ footer a {
 }
 
 .box {
-  display: flex;
+  display: none;
   flex-direction: column;
   margin: 30px;
   box-shadow: 0 0 18px rgba(0, 0, 0, 0.7);
@@ -399,6 +387,7 @@ footer a {
 
 .troop-photo {
   text-align: center;
+  margin-top: 50px;
 }
 
 .troop-photo img {
