--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -924,6 +924,9 @@ footer a {
 }
 
 .newsImg img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   width: 300px;
   height: 300px;
   transition: 0.3s ease-in-out;
