--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -466,6 +466,12 @@ footer a {
 .links img:hover {
   transform: scale(1.1);
 }
+
+.links h4 {
+  font-size: 35px;
+  text-align: center;
+  padding-bottom: 15px;
+}
 /* End Links on Homepage Styles */
 
 /* Contact Form Styles */
