--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -247,7 +247,7 @@ footer a {
 }
 
 .store {
-  display: none;
+  display: block;
   width: 90%;
   margin: 0 auto 50px auto;
   box-shadow: 0 0 18px rgba(0, 0, 0, 0.7);
