--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -749,7 +749,10 @@ footer a {
 
 .closeBtn {
   color: rgba(255, 255, 255, 0.87);
-  font-size: 25px;
+  font-size: 35px;
+  font-weight: 600;
+  font-style: normal;
+  font-family: 'Courier New', Courier, monospace;
   position: absolute;
   top: 0;
   right: 0;
